--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 </main>
      
     <footer class="page-footer">
-        <div class="container footer-container">
+        <div class="container-footer-container">
             <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
             <p class="footer-text">
                 Increase the flow of customers and
@@ -332,28 +332,28 @@
                 <div class="footer-social" > 
                    <p class="footer-text-social">Social media</p>
                      <ul class="social-items-footer">
-                       <li class="footter-social-list" >
+                       <li class="footer-social-list" >
                         <a class="social-link-footer" href="#a">
                         <svg class="icon-section-footer" width="24" height="24">
                         <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                 </a>
             </li>
-            <li class="footter-social-list">
+            <li class="footer-social-list">
                 <a class="social-link-footer" href="#a">
                     <svg class="icon-section-footer" width="24" height="24">
                         <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
-            <li class="footter-social-list">
+            <li class="footer-social-list">
                 <a class="social-link-footer" href="#a">
                     <svg class="icon-section-footer" width="24" height="24">
                         <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                 </a>
             </li>
-            <li class="footter-social-list">
+            <li class="footer-social-list">
                 <a class="social-link-footer" href="#">
                     <svg class="icon-section-footer" width="24" height="24">
                         <use href="./images/icons.svg#icon-linkedin"></use>
