--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 
  <footer>
     <div class="page-footer">
-        <div class="container footer-container">
+        <div class="container-footer-container">
             <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
             <p class="footer-text">
                 Increase the flow of customers and
